# Chess-Master

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  engine_wrapper.cpp  engine_wrapper.h  native-lib.cpp
app/src/main/cpp/stockfish/nnue/: network.h  nnue_accumulator.h  nnue_common.h  nnue_misc.h
app/src/main/cpp/stockfish/syzygy/: tbprobe.h
app/src/main/java/com/chessapp/adapter/: GameHistoryAdapter.java  ProfileAdapter.java
app/src/main/java/com/chessapp/database/: ChessDatabase.java  GameHistoryDao.java  ProfileDao.java
app/src/main/java/com/chessapp/engine/: EngineBridge.java
app/src/main/java/com/chessapp/model/: ChessBoard.java  ChessPiece.java  GameRecord.java  GameState.java  Move.java  PlayerProfile.java
app/src/main/java/com/chessapp/repository/: GameRepository.java
app/src/main/java/com/chessapp/ui/: AboutActivity.java  GameActivity.java  GameHistoryActivity.java  GameModeActivity.java  MainMenuActivity.java  ProfileManageActivity.java  ProfileSelectActivity.java  PvBotSetupActivity.java  PvPSetupActivity.java  SettingsActivity.java
app/src/main/java/com/chessapp/viewmodel/: GameHistoryViewModel.java  GameViewModel.java
app/src/main/java/com/chessapp/views/: ChessBoardView.java
app/src/main/res/anim/: button_press.xml  slide_down.xml  slide_up.xml
app/src/main/res/drawable/: bg_card.xml  bg_outlined_card.xml  bg_player_panel_inactive.xml  bg_thinking_dot.xml  bg_turn_dot_white.xml  ic_about.xml  ic_exit.xml  ic_menu.xml  ic_pvb.xml  ic_settings.xml  ripple_card.xml
app/src/main/res/layout/: activity_about.xml  activity_game_history.xml  activity_game_mode.xml  activity_main_menu.xml  activity_pvbot_setup.xml  activity_settings.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
